# embodied-agent-runtime

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  START_HERE.md  THIRD_PARTY_NOTICES.md
.github/: CODEOWNERS  (+1 more)
agent_gateway/: README.md  package.xml  setup.cfg  setup.py
agent_gateway/agent_gateway/: __init__.py  action_bridge.py  cli.py  evaluation_cli.py  intent_evaluation.py  mission_cli.py  mission_evaluation.py  mission_evaluation_cli.py  mission_plan.py  mission_probe.py  mission_provider.py  mission_runner.py  provider.py  provider_probe.py  task_request.py
agent_gateway/config/: provider.example.env
agent_gateway/evaluation/: intent_cases.json  mission_cases.json
agent_gateway/resource/: agent_gateway
agent_gateway/schema/: mission_plan.schema.json
agent_gateway/test/: test_action_bridge.py  test_intent_evaluation.py  test_mission_cli.py  test_mission_evaluation.py  test_mission_plan.py  test_mission_probe.py  test_mission_provider.py  test_mission_runner.py  test_provider.py  test_provider_probe.py  test_task_request.py
device_bridge/: CMakeLists.txt  README.md  package.xml
device_bridge/include/device_bridge/: heartbeat_monitor.hpp
device_bridge/launch/: vcan_device_readiness.launch.py
device_bridge/src/: heartbeat_monitor.cpp  socketcan_heartbeat_node.cpp
device_bridge/test/: test_heartbeat_monitor.cpp
ros2_ws/src/ai_task_adapter/: CMakeLists.txt  package.xml
ros2_ws/src/ai_task_adapter/config/: ai_task_adapter.yaml
ros2_ws/src/ai_task_adapter/src/: ai_task_adapter_node.cpp  natural_language_planner.cpp
ros2_ws/src/ai_task_adapter/test/: test_natural_language_planner.cpp
ros2_ws/src/device_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/device_bridge/config/: device_bridge.yaml
ros2_ws/src/device_bridge/src/: command_policy.cpp  device_bridge_client.cpp  device_bridge_node.cpp  diagnostic_state.cpp
ros2_ws/src/device_bridge/test/: test_command_policy.cpp  test_diagnostic_state.cpp
ros2_ws/src/perception_task_adapter/: CMakeLists.txt  package.xml
ros2_ws/src/perception_task_adapter/config/: perception_task_adapter.yaml
ros2_ws/src/perception_task_adapter/src/: aruco_detector.cpp  marker_trigger.cpp  perception_task_adapter_main.cpp  perception_task_adapter_node.cpp
ros2_ws/src/perception_task_adapter/test/: test_action_submission.cpp  test_aruco_detector.cpp  test_marker_trigger.cpp
ros2_ws/src/runtime_can/: CMakeLists.txt  package.xml
ros2_ws/src/runtime_can/src/: protocol.cpp  socket_can.cpp
ros2_ws/src/runtime_can/test/: test_protocol.cpp
ros2_ws/src/runtime_gateway/: CMakeLists.txt  package.xml
ros2_ws/src/runtime_gateway/proto/: robot_runtime.proto
ros2_ws/src/runtime_gateway/src/: gateway_service.cpp  loopback_server.cpp  request_registry.cpp  runtime_gateway_client.cpp  runtime_gateway_node.cpp
ros2_ws/src/runtime_gateway/test/: test_cli.py  test_grpc_action_bridge.cpp  test_grpc_validation.cpp  test_request_registry.cpp  test_signal_shutdown.py
ros2_ws/src/runtime_history/: CMakeLists.txt  package.xml
ros2_ws/src/runtime_history/src/: recorder.cpp  report_json.hpp  runtime_history_node.cpp  runtime_history_report.cpp  store.cpp
ros2_ws/src/runtime_history/test/: test_recorder.cpp  test_report_json.cpp  test_store.cpp
ros2_ws/src/runtime_monitor/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/runtime_monitor/config/: runtime_monitor.yaml
ros2_ws/src/runtime_monitor/src/: health_aggregator.cpp  runtime_monitor_node.cpp
ros2_ws/src/runtime_monitor/test/: test_health_aggregator.cpp  test_runtime_monitor_launch.py
ros2_ws/src/task_executor/: CMakeLists.txt  package.xml
ros2_ws/src/task_executor/config/: targets.yaml
ros2_ws/src/task_executor/src/: diagnostic_state.cpp  target_validator.cpp  task_event.cpp  task_executor_main.cpp  task_executor_node.cpp  task_executor_node.hpp
ros2_ws/src/task_executor/test/: test_diagnostic_state.cpp  test_executor_safety.cpp  test_signal_shutdown.py  test_target_validator.cpp  test_task_event.cpp
ros2_ws/src/task_orchestrator/: CMakeLists.txt  package.xml
ros2_ws/src/task_orchestrator/config/: workflows.xml
ros2_ws/src/task_orchestrator/src/: ready_state.cpp  task_orchestrator_node.cpp  task_orchestrator_node.hpp
ros2_ws/src/task_orchestrator/test/: test_orchestrator_faults.cpp  test_ready_state.cpp  test_worker_exception_launch.py  test_workflow_launch.py
ros2_ws/src/virtual_can_device/: CMakeLists.txt  package.xml
ros2_ws/src/virtual_can_device/config/: device.yaml
ros2_ws/src/virtual_can_device/src/: virtual_can_device_node.cpp
simulation/: README.md  package.xml  setup.cfg  setup.py
simulation/config/: targets.yaml
simulation/launch/: runtime_nav2_sim.launch.py
simulation/runtime_simulation/: __init__.py  initial_pose.py  map_validation.py  scene.py  scene_markers.py  validate_map.py
simulation/rviz/: runtime_nav2.rviz
simulation/test/: test_initial_pose.py  test_lifecycle_state.py  test_map_validation.py  test_nav2_sensor_timing.py  test_nav2_smoke_mode.py  test_scene.py
task_contract/: CMakeLists.txt  package.xml
task_contract/action/: ExecuteTask.action
task_contract/include/task_contract/: types.hpp
task_contract/msg/: TaskEvent.msg
task_contract/schema/: task_request.schema.json
task_executor/: CMakeLists.txt  README.md  package.xml
task_executor/include/task_executor/: target_map.hpp
task_executor/src/: execute_task_server.cpp  fake_navigate_to_pose_server.cpp  target_map.cpp
task_executor/test/: test_execute_task_launch.py  test_recovery_launch.py  test_runtime_readiness_launch.py  test_target_map.cpp
task_executor/test/data/: extra_field.yaml  invalid_frame.yaml  invalid_yaw.yaml  missing_target.yaml  nonfinite_target.yaml  unknown_target.yaml
task_guard/: CMakeLists.txt  package.xml
task_guard/config/: task_policy.yaml
task_guard/include/task_guard/: task_guard.hpp
task_guard/src/: task_guard.cpp
task_guard/test/: test_task_guard.cpp
task_guard/test/data/: invalid_target_policy.yaml  invalid_task_policy.yaml
(+107 files in other folders)
