<?xml version="1.0"?>
<package format="3">
  <name>agent_gateway</name>
  <version>0.1.0</version>
  <description>Strict model-output normalization for Embodied Agent Runtime.</description>
  <maintainer email="quchaosheng000406@163.com">Quchaosheng</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>python3-jsonschema</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>task_contract</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
