<?xml version="1.0"?>
<package format="3">
  <name>device_bridge</name>
  <version>0.1.0</version>
  <description>SocketCAN heartbeat readiness bridge for the embodied runtime.</description>
  <maintainer email="quchaosheng000406@163.com">Quchaosheng</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
