<?xml version="1.0"?>
<package format="3">
  <name>task_contract</name>
  <version>0.1.0</version>
  <description>Task interfaces and contract types for Embodied Agent Runtime.</description>
  <maintainer email="quchaosheng000406@163.com">Quchaosheng</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
