<?xml version="1.0"?>
<package format="3">
  <name>task_executor</name>
  <version>0.1.0</version>
  <description>Outer task Action Server and Nav2 Action client.</description>
  <maintainer email="quchaosheng000406@163.com">Quchaosheng</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ament_index_cpp</depend>
  <depend>nav2_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>task_contract</depend>
  <depend>task_guard</depend>
  <depend>yaml-cpp</depend>
  <test_depend>action_msgs</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
