<?xml version="1.0"?>
<package format="3">
  <name>task_guard</name>
  <version>0.1.0</version>
  <description>C++ task validation and safety policy for Embodied Agent Runtime.</description>
  <maintainer email="quchaosheng000406@163.com">Quchaosheng</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>task_contract</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
