<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>runtime_gateway</name>
  <version>0.0.0</version>
  <description>Loopback gRPC gateway for robot workflows.</description>
  <maintainer email="quchaosheng000406@163.com">sheng</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>libgrpc</build_depend>
  <build_depend>protobuf-dev</build_depend>
  <build_depend>protobuf-compiler-grpc</build_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>robot_task_interfaces</depend>
  <depend>runtime_history</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_index_python</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rclpy</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
