<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>runtime_history</name>
  <version>0.0.0</version>
  <description>SQLite-backed task runtime history.</description>
  <maintainer email="quchaosheng000406@163.com">sheng</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>libsqlite3-dev</depend>
  <depend>diagnostic_msgs</depend>
  <depend>rclcpp</depend>
  <depend>robot_task_interfaces</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
